--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!--Font Icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
+    <!--Font Icon CDN -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
       <title>Price Tracker</title>
   </head>
   <body>
